- Replace `output.kafka.use_type` by `output.kafka.topic` accepting a format string. {pull}2188[2188]

*Metricbeat*
- Change field type system.process.cpu.start_time from keyword to date. {issue}1565[1565]

*Packetbeat*

*Topbeat*

*Filebeat*
- Set close_inactive default to 5 minutes (was 1 hour before)

*Winlogbeat*


==== Bugfixes

*Affecting all Beats*

*Metricbeat*

*Packetbeat*
- Fix mapping for some Packetbeat flow metrics that were not marked as being longs. {issue}2177[2177]

*Topbeat*

*Filebeat*
- Fix processor failure in Filebeat when using regex, contain, or equals with the message field. {issue}2178[2178]

*Winlogbeat*

==== Added

*Affecting all Beats*
- Add script to generate the Kibana index-pattern from fields.yml. {pull}2122[2122]
- Enhance redis output key selection based on format string. {pull}2169[2169]
- Configurable redis `keys` using filters and format strings. {pull}2169[2169]
- Add format string support to `output.kafka.topic`. {pull}2188[2188]
- Add `output.kafka.topics` for more advanced kafka topic selection per event. {pull}2188[2188]
- Add support for kafka 0.10.
- Add support for kafka 0.10. {pull}2190[2190]
- Add SASL/PLAIN authentication support to kafka output. {pull}2190[2190]
- Make Kafka metadata update configurable. {pull}2190[2190]
- Add kafka version setting (optional) enabling kafka broker version support. {pull}2190[2190]
- Add kafka message timestamp if at least version 0.10 is configured. {pull}2190[2190]

*Metricbeat*

- Use the new scaled_float Elasticsearch type for the percentage values. {pull}2156[2156]
- Add cgroup metrics to the system/process MetricSet. {pull}2184[2184]

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*


==== Deprecated

*Affecting all Beats*

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*

////////////////////////////////////////////////////////////

[[release-notes-5.0.0-alpha5]]
=== Beats version 5.0.0-alpha5